--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="description" content="">
   
   <title>Home</title>
-  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/linecons/style.css">
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/icon54/style.css">
@@ -545,9 +545,9 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Casting Memories - Contact Form"><input type="hidden" name="email" data-form-email="true" value="TSTxhK6btFcc4DspvGfxJR/MaLWY5WP7rlzDuSqHlhLLXl4Ex5Qal8uCGIoM+j/bYANuuEfIH045pdbWgiwqAsX0MqR81b1RD4W01WTKUWN7wEH124rJ7Kp4jFEXfXiO.ArnN60gJGSE2tR9bc+7XjCRQKKvn1vCXBImbgVuG0ErGgmFaLxw+cdpZpCh3+UaUgGDbxne/t0xk+icuaa+trCBD0YFlCxFTfHD8CUWzx4DWhFYypde4ehnKnF9yISz1">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Casting Memories - Contact Form"><input type="hidden" name="email" data-form-email="true" value="0i8jtrDLrNg/4WOZfpzR4JnKebfvW0d6W7TS62KFHeYGvNw36G/f5md3KSiqlhw+7g+ykphRiD3Dr1NEzlhcVlxDzAAa4leHOBpK089zAREewGAvWYnFgTU7XPlFoX7Y.7HQadapitM3/gcwxMw1/mHQmca8dOTy3a7OtGqbhcmWXbomZSkjxf2WYV8BPbuPox9l+uGPBu3VNXFiYwUat5WpZwZZc8eR3m0mU3SKYOyiiis2QUiSe9/PfiR8fGuK8">
 <div class="form-row">
-<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Your Message has been sent. We will contact you soon to finalise your order</div>
+<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Your Message has been sent.  We will contact you soon to finalise your order</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
@@ -583,13 +583,13 @@
 </select>
 </div>
 <div data-for="name" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control display-7" value="" id="name-formbuilder-p">
+<input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control display-7" required="required" value="" id="name-formbuilder-p">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="email">
-<input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control display-7" value="" id="email-formbuilder-p">
+<input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control display-7" required="required" value="" id="email-formbuilder-p">
 </div>
 <div data-for="Phone" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="text" name="Phone" placeholder="Phone" data-form-field="Phone" class="form-control display-7" value="" id="Phone-formbuilder-p">
+<input type="text" name="Phone" placeholder="Phone" data-form-field="Phone" class="form-control display-7" required="required" value="" id="Phone-formbuilder-p">
 </div>
 <div data-for="message" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <textarea name="message" placeholder="Message" data-form-field="message" class="form-control display-7" id="message-formbuilder-p"></textarea>
@@ -686,7 +686,7 @@
 
         <h1 class="mbr-section-title pb-3 mbr-fonts-style mbr-white align-center display-1"><strong>Angel Casting</strong></h1>
         <p class="mbr-text pb-3 mbr-fonts-style mbr-white align-center display-7">
-            We would highly recommend that you create as many tangible memories as possible as these will help greatly in the days, weeks, months and years to come.  We have not heard a parent say they regret making memories but regularly hear parents say they regret not making any/enough.<br><br>We would like to advise there is now a $50 call out fee<br><br>Please contact us using the link below to discuss your needs.</p>
+            We would highly recommend that you create as many tangible memories as possible as these will help greatly in the days, weeks, months and years to come.  We have not heard a parent say they regret making memories but regularly hear parents say they regret not making any/enough.<br><br>We would like to advise there is now a $50 call out fee<br><br>Please contact us using the link below to discuss your needs or alternatively call us on&nbsp;021 050 2821.</p>
         <div class="mbr-section-btn pb-5 align-center"><a class="btn btn-md btn-bgr btn-black display-4" href="mailto:Castingmemories@outlook.co.nz">Get in Touch</a></div>
     </div>
     <div class="container mbr-black">
@@ -773,8 +773,8 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/wowslider-plugin/wowslider.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/popup-plugin/script.js"></script>
   <script src="assets/popup-ontimer-plugin/script.js"></script>
+  <script src="assets/popup-plugin/script.js"></script>
   <script src="assets/popup-overlay-plugin/script.js"></script>
   <script src="assets/mobirise-shop/script.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
@@ -795,8 +795,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   <script async src="assets/wowslider-effect/carousel/script.js"></script>
 </body>
 </html>
