create github pages

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="col-12 col-md-12 align-center">
                 
                 <h2 class="mbr-section-title align-center mbr-fonts-style mbr-bold display-2"><span style="font-weight: normal;">3D Sculptures of your baby's hands and feet
-</span><div><span style="font-weight: normal;">Beautifully framed to cherish forever</span></div></h2>
+</span><div><span style="font-weight: normal;">Beautifully framed to cherish forever</span></div><br><div><span style="font-weight: normal;">All casts are made from the highiest quality resin rock resulting in greater durability and better definition as opposed to plaster of Paris&nbsp;</span></div><div><span style="font-weight: normal;"><br></span></div></h2>
             </div>
         </div>
     </div>
@@ -705,7 +705,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Casting Memories - Contact Form"><input type="hidden" name="email" data-form-email="true" value="mj5AG6XpZNnxpNQPjLvq/3JsO9p0AG5UzwqgjokbVM4tagxa/IYUchqfLdZoXztMC8ypcNDgEA9CTY3EIejENOjFNUoIL7nXewAligba0Lkn9tsDWTidQFCrSfhabgtr.NmY2qUiKZ5u+2uVUKZLpbPkwlOQWs32FbUuu6YWGP+NcMxHfq+6wuTUHJoCv/ztUWAaO+82fiNFklYVsI8HyU7lsvKOs3a4K0QzC3wNqW7vxkivlrnoWsb1/b7c1NR3C">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Casting Memories - Contact Form"><input type="hidden" name="email" data-form-email="true" value="QRNu6L/t44f3Z3r6eKtQu2b3Bw58ZASN7/BsNif68NBlI/iV+gndlJADWjkwP98oAldRh6v3gd82XHN75L/V6HyBCF04OXPJX/Qt0oD/sAzQ80I+6CdK0rmX+plX8yYV.PdVvCgw4ABWqSmod9/32qYnJL4Ya8ERSJBzqhwso7DKNj8o21N1QEJvV7SY6Y+llTGjznwVm5LBprllvh7U+V2h8V19y0SedwyIw+ymoGG/dNxI3eQJ3wwNClMrGgONr">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Your Message has been sent.  We will contact you soon to finalise your order</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
